added 2nd video

--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
             <div class="embed-responsive embed-responsive-4by3"> 
                 <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Bl5630CeYFs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
-            <span class="name"> 73 Questions With Margot Robbie | Vogue</span> <br> <small> Vogue </small> <br> <small> 6,468,358 views &middot; days ago </small> 
+            <span class="name"> <a href="https://www.youtube.com/embed/Bl5630CeYFs"> 73 Questions With Margot Robbie</a></span> <br> <small> Vogue </small> <br> <small> 6,468,358 views &middot; Jun 6, 2019 </small> 
         </div>
         <div class="col">
             <div class="embed-responsive embed-responsive-4by3"> 
-                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/glpvRLUJ0UY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
+                <iframe width="embed-responsive-item" src="https://www.youtube.com/embed/PlYUZU0H5go" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
             </div>
-            <span class="name"> Michael Buble</span> <br> <small> Kaorakke Videos </small> <br> <small> 621,314 views &middot; days ago </small> 
+            <span class="name"> <a href="https://www.youtube.com/embed/PlYUZU0H5go">  LAST CHRISTMAS Official Trailer (2019) </a> </span> <br> <small> Universal Pictures </small> <br> <small> 5,400,767  &middot; Aug 13, 2019 </small> 
         </div>
         <div class="col">
             <div class="embed-responsive embed-responsive-4by3"> 
